--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div id="_idContainer007" class="Basic-Text-Frame"> </div>
 		<div class="_idGenObjectLayout-1">
 			<div id="_idContainer008" class="_idGenObjectStyleOverride-2">
-				<img class="_idGenObjectAttribute-1" src="0_Cover-web-resources/image/email.png" alt="" />
+				<img class="_idGenObjectAttribute-1" src="img/about/email.png" alt="" />
 			</div>
 		</div>
 		<div id="_idContainer009" class="Basic-Text-Frame">
