--- a/index.html
+++ b/index.html
@@ -1,50 +1,21 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta charset="utf-8" />
-		<title>0_Cover</title>
-		<link href="0_Cover-web-resources/css/idGeneratedStyles.css" rel="stylesheet" type="text/css" />
-	</head>
-	<body id="x0_Cover" lang="en-US">
-		<div class="_idGenObjectLayout-1"> </div>
-<div id="_idContainer002" class="Basic-Text-Frame">
-	<p class="Basic-Paragraph">&nbsp;</p>
-		</div>
-		<div class="_idGenObjectLayout-1">
-			<div id="_idContainer006">
-				<div id="_idContainer003" class="Basic-Text-Frame">
-					<p class="Basic-Paragraph"><span class="CharOverride-3">P</span></p>
-				</div>
-				<div id="_idContainer004" class="Basic-Text-Frame">
-					<p class="Basic-Paragraph"><span class="CharOverride-4">M</span></p>
-				</div>
-				<div id="_idContainer005" class="Basic-Text-Frame">
-					<p class="Basic-Paragraph"><span class="CharOverride-4">R</span></p>
-				</div>
-			</div>
-		</div>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-	<p>&nbsp;</p>
-		<p><span class="CharOverride-1"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; PAU MOLAS ROCA</span></p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
-		<div id="_idContainer007" class="Basic-Text-Frame"> </div>
-		<div class="_idGenObjectLayout-1">
-			<div id="_idContainer008" class="_idGenObjectStyleOverride-2">
-				<img class="_idGenObjectAttribute-1" src="img/about/email.png" alt="" />
-			</div>
-		</div>
-		<div id="_idContainer009" class="Basic-Text-Frame">
-		  <p class="Basic-Paragraph ParaOverride-1"><a><span class="CharOverride-5" lang="es-ES"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; info@paumolasroca.com</span></a></p>
-		</div>
-		<div id="_idContainer010" class="Basic-Text-Frame">
-			<p class="Basic-Paragraph">&nbsp;</p>
-		</div>
-		<div id="_idContainer011" class="Basic-Text-Frame">
-			<p class="Basic-Paragraph">&nbsp;</p>
-		</div>
-	</body>
-</html>
+body, div, dl, dt, dd, h1, h2, h3, h4, h5, h6, p, pre, code, blockquote {
+	margin:0;
+	padding:0;
+	border-width:0;
+}
+body {
+	-epub-hyphens:auto;
+}
+#_idContainer000 {
+	display:inline-block;
+	height:746px;
+	width:1024px;
+}
+img._idGenObjectAttribute-1 {
+	height:100.00%;
+	min-width:100%;
+	width:100.00%;
+}
+div._idGenObjectLayout-1 {
+	text-align:center;
+}
